objects/nFORCE__Business_Activity_Execution__c.object
<CustomObject>
    <description>This object represents the individual business activity that the system ran as part of a business process and maintains the state of the business activity during its execution</description>
    <fields>
        <fullName>nFORCE__Business_Activity_Name__c</fullName>
        <description>The system automatically populates this required string field with the name of the business activity it is associated with.</description>
        <inlineHelpText>This automatically populated required field displays the name of the business activity it is associated with.</inlineHelpText>
        <label>Business Activity Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Business_Process_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this field with the Business Process Interaction record to which this business activity execution is associated. By default, it is blank.</description>
        <inlineHelpText>This automatically populated field displays the Business Process Interaction record to which this business activity is associated.</inlineHelpText>
        <label>Business Process Interaction</label>
        <referenceTo>nFORCE__Business_Process_Interaction__c</referenceTo>
        <relationshipLabel>Business Process Interactions</relationshipLabel>
        <relationshipName>Linked_Business_Process_Interaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Child_Activity_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The system automatically populates this field with the expected child activity count. By default, it is zero</description>
        <inlineHelpText>This automatically populated field displays the expected child activities.</inlineHelpText>
        <label>Expected Child Activity Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Config_Template_Is_Dynamic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this optional field to indicate whether the business process was previously stored. By default, it is false.</description>
        <inlineHelpText>This automatically populated field displays whether the business process was previously stored.</inlineHelpText>
        <label>Business Process Is Dynamic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Config_Template_Name__c</fullName>
        <description>The system automatically populates this required string field with the business process key it is associated with.</description>
        <inlineHelpText>This automatically populated field displays the business process key it is associated with.</inlineHelpText>
        <label>Business Process Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Correlation_Id__c</fullName>
        <description>The system automatically populates this required string field with an ID that refers to all Business Activity executions in the scope of this executing business process.</description>
        <inlineHelpText>This automatically populated field displays an ID that refers to all Business Activity executions in the scope of this executing business process.</inlineHelpText>
        <label>Correlation Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Description__c</fullName>
        <description>The system automatically populates this field to identify the intent of this Business Activity execution.</description>
        <inlineHelpText>This automatically populated field displays the intent of this Business Activity execution.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Duration__c</fullName>
        <description>UThe system automatically populates this optional field with the end-to-end processing time of this Business Activity execution that includes queued wait times.</description>
        <formula>nFORCE__FinalTimestamp__c - nFORCE__Timestamp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This automatically populated field displays the end-to-end processing time of this Business Activity execution.</inlineHelpText>
        <label>Execution Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Execution_Id__c</fullName>
        <description>The system automatically populates this optional field with the Apex Batch Job ID or the Business Activity Event UUID. If synchronously executed and using Apex Batch, this field is blank. By default, it is blank.</description>
        <inlineHelpText>This automatically populated field displays the Apex Batch Job ID or the Business Activity Event UUID.</inlineHelpText>
        <label>Execution Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__External_Id__c</fullName>
        <description>The system automatically populates this required string field with an ID that refers to this Business Activity execution.</description>
        <externalId>true</externalId>
        <inlineHelpText>This automatically populated field displays an ID that refers to this Business Activity.</inlineHelpText>
        <label>External Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__FQCN__c</fullName>
        <description>The system automatically populates this required text field with the fully qualified class name of the Business Activity handler.</description>
        <inlineHelpText>This automatically populated field displays the fully qualified class name of the business activity handler.</inlineHelpText>
        <label>Fully Qualified Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__FinalTimestamp__c</fullName>
        <description>The system automatically populates this required field to capture the timestamp of completion of the Business Activity execution.</description>
        <inlineHelpText>This automatically populated field displays the completion timestamp of the Business Activity.</inlineHelpText>
        <label>Final Timestamp</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Finalization_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this field to indicate if this Business Activity execution has completed all finalization processes. By default, it is false.</description>
        <inlineHelpText>This automatically populated field displays whether the Business Activity execution is complete.</inlineHelpText>
        <label>Finalization Is Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Finalization_Enqueued__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this field to indicate if a finalization process has been enqueued. By default, it is false.</description>
        <inlineHelpText>This automatically populated field displays whether a finalization process has been enqueued.</inlineHelpText>
        <label>Finalization Handler Is Enqueued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Scheduled_Single_Run__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The system automatically populates this optional field to indicate if this Business Activity execution, if scheduled, executes once or is recurring. By default, it is true.</description>
        <inlineHelpText>This automatically populated field displays whether a Business Activity execution, if scheduled, executes once or is recurring.</inlineHelpText>
        <label>Is Scheduled Single Run Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this optional field to indicate if this business activity execution is scheduled for future processing. By default, it is false.</description>
        <inlineHelpText>This automatically populated field displays whether this business activity execution is scheduled for future processing.</inlineHelpText>
        <label>Is Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Message__c</fullName>
        <description>The system automatically populates this optional text field with the most recent relevant message determined by the Business Activity execution handler. By default, it is blank.</description>
        <inlineHelpText>This automatically populated field displays the most recent message determined by the Business Activity execution handler.</inlineHelpText>
        <label>Message</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Parent_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional field with the parent Business Activity execution record to which this Business Activity execution is associated. By default, it is blank.</description>
        <inlineHelpText>This automatically populated field displays the parent Business Activity execution record to which this Business Activity execution is associated.</inlineHelpText>
        <label>Parent Activity</label>
        <referenceTo>nFORCE__Business_Activity_Execution__c</referenceTo>
        <relationshipLabel>Business Activity Execution</relationshipLabel>
        <relationshipName>childActivityExecution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Perform_Async__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox field to indicate that this Business Activity execution runs asynchronously or not. By default, it is false.</description>
        <inlineHelpText>This automatically selected checkbox displays whether this Business Activity execution runs asynchronously or not.</inlineHelpText>
        <label>Perform Async</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this optional field to indicate that this Business Activity execution has been published or not. By default, it is false.</description>
        <inlineHelpText>This automatically populated field indicates that this Business Activity execution has been published or not.</inlineHelpText>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Scheduled_CRON_Expr__c</fullName>
        <description>The system automatically populates this optional field with the Salesforce compatible CRON expression representing the future time to be published. By default, it is blank.</description>
        <inlineHelpText>This automatically populated field displays the CRON expression.</inlineHelpText>
        <label>Scheduled Job CRON Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Status__c</fullName>
        <description>The system automatically populates this required picklist field to indicate the current status of this Business Activity execution. By default, it is Queued.</description>
        <inlineHelpText>This automatically populated field displays the status current status of this Business Activity execution.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
                <value>
                    <fullName>Completed With Errors</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Timestamp__c</fullName>
        <description>The system automatically populates this required field with the timestamp of the time the Business Activity execution was created.</description>
        <inlineHelpText>This automatically populated field displays the timestamp of when the Business Activity execution was created.</inlineHelpText>
        <label>Timestamp</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Wait_For_External_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox to indicate that the Business Activity execution should remain in progress until an external process updates the status to continue. By default, it is false.</description>
        <inlineHelpText>This automatically selected checkbox indicates that the Business Activity execution should remain in progress until an external process updates the status to continue.</inlineHelpText>
        <label>Wait For External Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Business Activity Execution</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Business Activity Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Activity Executions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>